--- a/steps/pagerduty/escalation-policy/get/manifest.yaml
+++ b/steps/pagerduty/escalation-policy/get/manifest.yaml
@@ -27,11 +27,11 @@ outputs:
     type: "string"
     example: "my policy description"
   - name: self
-    description: "The API show URL at which the object is accessible"
+    description: "The API show URL at which the object is accessible."
     type: "string"
     example: "https://api.pagerduty.com/escalation_policies/PZKYQ07"
   - name: api_object
-    description: "JSON object contains raw response information"
+    description: "JSON object contains raw response information."
     type: "json"
     example: |
       {"id":"PZKYQ07","type":"escalation_policy","summary":"mypolicy","self":"https://api.pagerduty.com/escalation_policies/PZKYQ07","html_url":"https://myaccount.pagerduty.com/escalation_policies/PZKYQ07","name":"mypolicy","escalation_rules":[{"id":"PUDKQ17","escalation_delay_in_minutes":30,"targets":[{"id":"P0HDNP7","type":"user_reference","summary":"Jhon Doe","self":"https://api.pagerduty.com/users/P0HDNP7","html_url":"https://myaccount.pagerduty.com/users/P0HDNP7"}]}],"num_loops":2,"teams":[],"description":"my policy description"}
