--- a/steps/prometheus/query/range/raw/manifest.yaml
+++ b/steps/prometheus/query/range/raw/manifest.yaml
@@ -39,6 +39,6 @@ envs:
     type: "bool"
     example: "\"true\",\"false\""
 outputs:
-  - name: basic-logs 
+  - name: logs
     description: "Raw output of Prometheus query."
     type: "json"
