--- a/steps/prometheus/query/raw/manifest.yaml
+++ b/steps/prometheus/query/raw/manifest.yaml
@@ -27,6 +27,6 @@ envs:
     example: "\"true\",\"false\""
 
 outputs:
-  - name: basic-logs 
+  - name: logs
     description: "Raw output of Prometheus query."
     type: "json"
