--- a/steps/redis/client-list/manifest.yaml
+++ b/steps/redis/client-list/manifest.yaml
@@ -26,7 +26,7 @@ envs:
     type: "string"
     example: "redis://<username>:<password>@<host>:<port>/<database>"
   - name: LIMIT 
-    description: "Maximum amount of clients to be listed. default\: no limit."
+    description: "Maximum amount of clients to be listed. default\\: no limit."
     type: "int"
     example: 20
   - name: ORDER_BY
@@ -41,6 +41,6 @@ envs:
 
 outputs:
   - name: output
-    description: "Array of a Redis instance current clients and detailes about them."
+    description: "Array of a Redis instance current clients and details about them."
     type: "json"
     example: '[{"addr":"127.0.0.1:51708","age":"0","argv-mem":"10","cmd":"client","db":"0","events":"r","fd":"8","flags":"N","id":"110","idle":"0","multi":"-1","name":"","obl":"0","oll":"0","omem":"0","psub":"0","qbuf":"26","qbuf-free":"32742","sub":"0","tot-mem":"54298","user":"default"}]'
