--- a/steps/utils/echo/manifest.yaml
+++ b/steps/utils/echo/manifest.yaml
@@ -8,6 +8,6 @@ metadata:
 
 envs:
   - name: MESSAGE 
-    description: "The message to print. If not provided will command line arguments"
+    description: "The message to print. If not provided will command line arguments."
     type: "string"
     required: true
