--- a/steps/ansible/awx/job-events/manifest.yaml
+++ b/steps/ansible/awx/job-events/manifest.yaml
@@ -2,34 +2,34 @@ apiVersion: stackpulse.io/v1
 kind: Step
 metadata:
   name: "ansible_awx_job_events"
-  description: "Prints stdout of the job until it finishes"
+  description: "Prints stdout of the job until it finishes."
   vendor: ansible
   type: hydration
 
 envs:
   - name: HOST
-    description: "AWX host"
+    description: "AWX host."
     type: "string"
     required: true
     example: "http://my.awx.host"
   - name: USERNAME
-    description: "Username is used to authenticate. Must be supplied if the token is empty"
+    description: "Username is used to authenticate. Must be supplied if the token is empty."
     type: "string"
     required: false
   - name: PASSWORD
-    description: "Password is used to authenticate. Must be supplied if the token is empty"
+    description: "Password is used to authenticate. Must be supplied if the token is empty."
     type: "string"
     required: false
   - name: TOWER_OAUTH_TOKEN
-    description: "Token for authentication. Must be supplied if USERNAME and PASSWORD are empty"
+    description: "Token for authentication. Must be supplied if USERNAME and PASSWORD are empty."
     type: "string"
     required: false
   - name: INSECURE
-    description: "Allow HTTPS insecure connection"
+    description: "Allow HTTPS insecure connection."
     type: "bool"
     required: false
     default: false
   - name: JOB_ID
-    description: "Job ID to get events for"
+    description: "Job ID to get events for."
     type: "string"
     required: true
