--- a/steps/atlassian/jira/update-issue-status/manifest.yaml
+++ b/steps/atlassian/jira/update-issue-status/manifest.yaml
@@ -2,7 +2,7 @@ apiVersion: stackpulse.io/v1
 kind: Step
 metadata:
   name: "atlassian_jira_update_issue_status"
-  description: "Update the status of existing Jira issue"
+  description: "Update the status of existing Jira issue."
   vendor: jira
   type: notification
 envs:
