--- a/steps/kafka/alter-topic/manifest.yaml
+++ b/steps/kafka/alter-topic/manifest.yaml
@@ -2,33 +2,33 @@ apiVersion: stackpulse.io/v1
 kind: Step
 metadata:
   name: "kafka_alter_topic"
-  description: "Alter a Kafka topic configuration"
+  description: "Alter a Kafka topic configuration."
   vendor: kafka
   type: remediation
 
 envs:
   - name: ZOOKEPER_HOST
     required: true
-    description: "Zookeeper host"
+    description: "Zookeeper host."
     type: string
     example: "<host>:<port>"
   - name: TOPIC_NAME
     required: true
     type: string
-    description: "Topic name to alter"
+    description: "Topic name to alter."
     example: "my-topic"
   - name: CONFIG_NAME
     required: true
     type: string
-    description: "Config name"
+    description: "Config name."
     example: "advertised.listeners"
   - name: CONFIG_VAL
     required: true
     type: string
-    description: "Config value"
+    description: "Config value."
     example: "PLAINTEXT"
 
 outputs:
-  - name: basic-logs
-    description: "Raw output for the command"
+  - name: logs
+    description: "Raw output for the command."
     type: "string"
