--- a/steps/kubectl/apply-file/manifest.yaml
+++ b/steps/kubectl/apply-file/manifest.yaml
@@ -2,7 +2,7 @@ apiVersion: stackpulse.io/v1
 kind: Step
 metadata:
   name: "kubectl_apply_file"
-  description: "Apply a Kubernetes object file"
+  description: "Apply a Kubernetes object file."
   vendor: kubernetes
   type: remediation
 
@@ -13,23 +13,23 @@ envs:
     required: false
     example: '{{ secret "KUBECONFIG_CONTENT" }}'
   - name: NAMESPACE
-    description: "Namespace to run the command in. Default value is 'default'"
+    description: "Namespace to run the command in. Default value is 'default'."
     type: "string"
     example: "stackpulse"
   - name: FORMAT
-    description: "Output format. default to 'json' for other formats see https://kubernetes.io/docs/reference/kubectl/overview/#output-options"
+    description: "Output format. default to 'json' for other formats see https://kubernetes.io/docs/reference/kubectl/overview/#output-options."
     type: "string"
     example: "wide"
   - name: ALL_NAMESPACES
-    description: "If true, running command on all namespaces"
+    description: "If true, running command on all namespaces."
     type: "bool"
     example: "true"
   - name: FIELD_SELECTOR
-    description: "Applying the given field selector to the command. See https://kubernetes.io/docs/concepts/overview/working-with-objects/field-selectors for details"
+    description: "Applying the given field selector to the command. See https://kubernetes.io/docs/concepts/overview/working-with-objects/field-selectors for details."
     type: "string"
     example: "status.phase=Running"
   - name: APPLY_FILE_PATH
-    description: "The path of the Kubernetes object yaml file"
+    description: "The path of the Kubernetes object yaml file."
     type: "string"
     required: true
     example: "./my-manifest.yaml"
@@ -38,6 +38,6 @@ integrations:
   - k8s
 
 outputs:
-  - name: basic-logs
-    description: "Raw output of kubectl command"
+  - name: logs
+    description: "Raw output of kubectl command."
     type: "string"
