--- a/steps/rabbitmq/channels/manifest.yaml
+++ b/steps/rabbitmq/channels/manifest.yaml
@@ -2,39 +2,39 @@ apiVersion: stackpulse.io/v1
 kind: Step
 metadata:
   name: "rabbitmq_channels"
-  description: "Get information about RabbitMQ channels"
+  description: "Get information about RabbitMQ channels."
   vendor: rabbitmq
   type: hydration
 
 envs:
   - name: USERNAME
-    description: "Username"
+    description: "Username."
     type: "string"
     required: true
   - name: PASSWORD
-    description: "Password"
+    description: "Password."
     type: "string"
     required: true
   - name: HOST
-    description: "RabbitMQ host"
+    description: "RabbitMQ host."
     type: "string"
     required: true
   - name: PORT
-    description: "Host port (15672 is the common port)"
+    description: "Host port (15672 is the common port)."
     type: "string"
     required: true
     default: "15672"
   - name: SCHEMA
-    description: "Host schema (http/https)"
+    description: "Host schema (http/https)."
     type: "string"
     example: "https"
   - name: VERIFY
-    description: "Should verify HTTPS or not"
+    description: "Should verify HTTPS or not."
     type: "bool"
     default: "true"
 
 outputs:
   - name: output
-    description: "RabbitMQ channels array"
+    description: "RabbitMQ channels array."
     type: "json"
     example: '[{"acks_uncommitted":0,"confirm":false,"connection_details":{"name":"127.0.0.1:54594 -> 127.0.0.1:5672","peer_host":"127.0.0.1","peer_port":54594},"consumer_count":1,"garbage_collection":{"fullsweep_after":65535,"max_heap_size":0,"min_bin_vheap_size":46422,"min_heap_size":233,"minor_gcs":5},"global_prefetch_count":0,"idle_since":"2021-01-18 13:00:18","messages_unacknowledged":0,"messages_uncommitted":0,"messages_unconfirmed":0,"name":"127.0.0.1:54594 -> 127.0.0.1:5672 (1)","node":"rabbit@mu-rabbit-rabbitmq-0.mu-rabbit-rabbitmq-headless.rabbit.svc.cluster.local","number":1,"pending_raft_commands":0,"prefetch_count":0,"reductions":12420,"reductions_details":{"rate":0},"state":"running","transactional":false,"user":"user","user_who_performed_action":"user","vhost":"/"}]'
