--- a/steps/redis/hget/manifest.yaml
+++ b/steps/redis/hget/manifest.yaml
@@ -2,13 +2,13 @@ apiVersion: stackpulse.io/v1
 kind: Step
 metadata:
   name: "redis_hget"
-  description: "Perform Redis hget call, (https://redis.io/commands/hget)"
+  description: "Perform Redis hget call, (https://redis.io/commands/hget)."
   vendor: redis
   type: hydration
 
 envs:
   - name: REDIS_IP 
-    description: "Destination redis IP address (required)"
+    description: "Destination redis IP address (required)."
     type: "string"
     required: true
     example: "127.0.0.1"
@@ -18,20 +18,20 @@ envs:
     required: false
     example: 'myuser'
   - name: REDIS_PASSWORD
-    description: "Destination redis password (optional)"
+    description: "Destination redis password (optional)."
     type: "string"
     example: '{{ secret "REDIS_PASSWORD" }}'
   - name: REDIS_URL 
-    description: "Redis url (required if there is no redis IP address specified)"
+    description: "Redis url (required if there is no redis IP address specified)."
     type: "string"
     example: "redis://<username>:<password>@<host>:<port>/<database>"
   - name: KEY 
-    description: "Item key"
+    description: "Item key."
     type: "string"
     required: true
     example: "mykey"
   - name: FIELD 
-    description: "Item field"
+    description: "Item field."
     type: "string"
     required: true
     example: "myfield"
