--- a/steps/victorops/incident/acknowledge/manifest.yaml
+++ b/steps/victorops/incident/acknowledge/manifest.yaml
@@ -1,7 +1,7 @@
 apiVersion: stackpulse.io/v1
 kind: Step
 metadata:
-  name: "victorops-incident-acknowledge"
+  name: "victorops_incident_acknowledge"
   description: "Acknowledge an incident."
   vendor: victorops
   type: remediation 
@@ -24,7 +24,7 @@ envs:
     type: "string"
     required: true
   - name: ACK_MESSAGE
-    description: "Include this as the acknowledge message"
+    description: "Include this as the acknowledge message."
     type: "string"
     required: false
 
