--- a/steps/victorops/incident/get/manifest.yaml
+++ b/steps/victorops/incident/get/manifest.yaml
@@ -1,8 +1,8 @@
 apiVersion: stackpulse.io/v1
 kind: Step
 metadata:
-  name: "victorops-get-incident"
-  description: "Retrieve information about a specific incident"
+  name: "victorops_get_incident"
+  description: "Retrieve information about a specific incident."
   vendor: victorops
   type: triage 
 
@@ -16,7 +16,7 @@ envs:
     type: "string"
     required: true
   - name: INCIDENT_NUMBER
-    description: "Incident number to retreive."
+    description: "Incident number to retrieve."
     type: "int"
     required: true
 
@@ -32,6 +32,6 @@ outputs:
     description: "The unique identification of the entity being monitored that caused the incident."
     type: "string"
   - name: api_object
-    description: "Original api object as recevied from the API call."
+    description: "Original api object as received from the API call."
     type: "json"
     example: '{"incidentNumber":"string","startTime":"string","currentPhase":"RESOLVED","alertCount":0,"lastAlertTime":"string","lastAlertId":"string","entityId":"string","host":"string","service":"string","pagedUsers":["string"],"pagedTeams":["string"],"pagedPolicies":[{"policy":{"name":"string","slug":"string","_selfUrl":"string"},"team":{"name":"string","slug":"string"}}],"transitions":[{"name":"string","at":"string","by":"string","message":"string","manually":true,"alertId":"string","alertUrl":"string"}],"firstAlertUuid":"string","monitorName":"string","monitorType":"UNKNOWN"}'
